sandbox/output
AnagramTest.java:26: error: ';' expected
        assertThat(Anagrams.of("abcd").size(), is(24)));
                                                      ^
1 error
